tests/fixtures/pass/infer_runtime_partial.sali
let choose(T: type)(first: T)(second: T): T = second

let main(): i32 = {
  let choose_after_zero = choose(_)(0)
  choose_after_zero(42)
}
